#add_executable(test_file_gen1 test_file_gen1.c)
#add_executable(test_file_gen2 test_file_gen2.c)
add_executable(problem1a problem1a.c)
add_executable(problem1b problem1b.c)
add_executable(problem2 problem2.c)
add_executable(problem3a problem3a.c)
add_executable(problem3b problem3b.c)
target_link_libraries(problem3b m)